force-app/main/default/objects/CostLeadData__c/CostLeadData__c.object-meta.xml
<CustomObject>
    <label>Cost Lead Data</label>
    <nameField>
        <displayFormat>CLD-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Cost Lead Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Lead Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>