force-app/main/default/objects/CostLeadData__c/fields/Marketing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel__c</fullName>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Display Prospecting</fullName>
            </value>
            <value>
                <fullName>Display Remarketing</fullName>
            </value>
            <value>
                <fullName>Outbrain Prospecting</fullName>
            </value>
            <value>
                <fullName>Outbrain Remarketing</fullName>
            </value>
            <value>
                <fullName>Taboola Prospecting</fullName>
            </value>
            <value>
                <fullName>Taboola Remarketing</fullName>
            </value>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>Founder Portal</fullName>
            </value>
            <value>
                <fullName>Google Shopping</fullName>
            </value>
            <value>
                <fullName>SEA Brand</fullName>
            </value>
            <value>
                <fullName>SEA Competitor</fullName>
            </value>
            <value>
                <fullName>facebook remarketing</fullName>
            </value>
            <value>
                <fullName>MVF-Global</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Mobile Transaction</fullName>
            </value>
            <value>
                <fullName>Kassen-Vergleich.com</fullName>
            </value>
            <value>
                <fullName>TradingTwins</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>METRO - C&amp;C Callcenter</fullName>
            </value>
            <value>
                <fullName>METRO - Event &amp; Trade Show</fullName>
            </value>
            <value>
                <fullName>METRO - Landing Page</fullName>
            </value>
            <value>
                <fullName>METRO - Salesforce</fullName>
            </value>
            <value>
                <fullName>METRO - Telesales existing custo</fullName>
            </value>
            <value>
                <fullName>METRO - HD Landingpage</fullName>
            </value>
            <value>
                <fullName>METRO - Dish</fullName>
            </value>
            <value>
                <fullName>METRO - C&amp;C Floor</fullName>
            </value>
            <value>
                <fullName>METRO - HoReCa Salesforce</fullName>
            </value>
            <value>
                <fullName>METRO - Telesales existing customer</fullName>
            </value>
            <value>
                <fullName>Direct Placement</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>