force-app/main/default/objects/CostLeadData__c/fields/Marketing_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Type__c</fullName>
    <label>Marketing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MINI</fullName>
            </value>
            <value>
                <fullName>PRO</fullName>
            </value>
            <value>
                <fullName>PRO or MINI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>