force-app/main/default/objects/CostLeadData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Marketing_Type__c</columns>
    <columns>UTMCampaign__c</columns>
    <columns>Marketing_Channel__c</columns>
    <columns>Ad_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketing_Type__c</field>
        <operation>equals</operation>
        <value>MINI,PRO</value>
    </filters>
    <label>All Records</label>
</ListView>