force-app/main/default/objects/CostLeadData__c/listViews/Generic_Lead.listView-meta.xml
<ListView>
    <fullName>Generic_Lead</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>UTMCampaign__c</columns>
    <columns>Ad_Cost__c</columns>
    <columns>Marketing_Channel__c</columns>
    <columns>Marketing_Type__c</columns>
    <columns>Channel_Cluster__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UTMCampaign__c</field>
        <operation>contains</operation>
        <value>_prgen</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>9/7/2021</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>9/30/2021 12:00 AM</value>
    </filters>
    <label>Generic Lead</label>
</ListView>