force-app/main/default/objects/CostLeadData__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Ad_Cost__c</columns>
    <columns>UTMCampaign__c</columns>
    <columns>Marketing_Channel__c</columns>
    <columns>Marketing_Type__c</columns>
    <columns>Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>This Month</label>
</ListView>